fix(upload): deleted visibility choice at upload
